voting-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-gateway
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - name: vote
      port: 8080
      targetPort: 8080
    - name: result
      port: 8081
      targetPort: 8081
