ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /vote(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote
                port:
                  number: 8080
          - path: /result(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: result
                port:
                  number: 8081
